--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ tracing-subscriber = { version = "0.3", features = [
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-nats = "0.42"
-tonic = "0.11"
+tonic = { version = "0.11", features = ["tls"] }
 clap = { version = "4.5", features = ["derive", "env"] }
 async-trait = "0.1"
 figment = { version = "0.10", features = ["toml", "env"] }
