--- a/config/oasis-server.toml
+++ b/config/oasis-server.toml
@@ -1,16 +1,11 @@
 [nats]
 # NATS 服务器连接地址
-url = "nats://localhost:4222"
-# 可选的NATS连接配置
-tls_required = false
-# creds_file = "certs/nats.creds"
-# tls_ca_file = "certs/nats-ca.pem"
-# tls_cert_file = "certs/nats-client.pem"
-# tls_key_file = "certs/nats-client-key.pem"
-
-[tls]
-# 全局 TLS 配置
-enabled = false
+url = "tls://localhost:4443"
+# NATS 连接配置
+creds_file = "certs/nats.creds"
+tls_ca_file = "certs/nats-ca.pem"
+tls_cert_file = "certs/nats-client.pem"
+tls_key_file = "certs/nats-client-key.pem"
 
 [telemetry]
 # 日志级别: trace, debug, info, warn, error
@@ -20,10 +15,6 @@ log_format = "text"
 # 禁用 ANSI 颜色输出
 log_no_ansi = false
 
-# ==============================================
-# Server 特有配置部分
-# ==============================================
-
 [server]
 # gRPC 服务监听地址
 grpc_addr = "127.0.0.1:50051"
@@ -31,16 +22,12 @@ grpc_addr = "127.0.0.1:50051"
 heartbeat_ttl_sec = 90
 
 [server.grpc_tls]
-# gRPC TLS 配置
-enabled = false
 # CA 证书路径（用于验证客户端证书）
-ca_cert = "certs/ca.pem"
+ca_cert = "certs/grpc-ca.pem"
 # 服务器证书路径
-server_cert = "certs/server.pem"
+server_cert = "certs/grpc-server.pem"
 # 服务器私钥路径
-server_key = "certs/server-key.pem"
-# 是否要求客户端证书（双向认证）
-require_client_cert = false
+server_key = "certs/grpc-server-key.pem"
 # 证书文件检查间隔（秒，用于热重载）
 cert_check_interval_sec = 300
 
@@ -52,25 +39,25 @@ cert_check_interval_sec = 300
 
 [streams.tasks]
 # 任务 Stream - 存储待执行的任务
-max_age_sec = 86400     # 统一使用 max_age_sec
-max_msgs = 1000000      # 统一使用 max_msgs
+max_age_sec = 86400    # 统一使用 max_age_sec
+max_msgs = 1000000     # 统一使用 max_msgs
 max_bytes = 1000000000
-max_msg_size = 1048576  # 1MB
+max_msg_size = 1048576 # 1MB
 storage = "file"
 replicas = 1
 
 [streams.results]
 # 结果 Stream - 存储任务执行结果
-max_age_sec = 604800    # 7 days
-max_msgs = 10000000     # 10M messages
-max_bytes = 5000000000  # 5GB
-max_msg_size = 1048576  # 1MB
+max_age_sec = 604800   # 7 days
+max_msgs = 10000000    # 10M messages
+max_bytes = 5000000000 # 5GB
+max_msg_size = 1048576 # 1MB
 storage = "file"
 replicas = 1
 
 [streams.rollouts]
 # 灰度发布 Stream 
-max_age_sec = 86400     # 1 day
+max_age_sec = 86400    # 1 day
 max_msgs = 1000000
 max_bytes = 1000000000
 max_msg_size = 1048576
@@ -78,15 +65,15 @@ storage = "file"
 replicas = 1
 
 [streams.dlq]
-# DLQ (Dead Letter Queue) Stream
-max_age_sec = 2592000   # 30 days
+# DLQ 
+max_age_sec = 2592000 # 30 days
 max_msgs = 100000
-max_bytes = 100000000   # 100MB
+max_bytes = 100000000 # 100MB
 
 [streams.artifacts]
-# 对象存储（新增）
+# 对象存储
 max_age_sec = 86400
-max_bytes = 10737418240  # 10GB
+max_bytes = 10737418240 # 10GB
 storage = "file"
 replicas = 1
 
@@ -99,7 +86,7 @@ empty_results_threshold = 5
 
 [kv]
 # KV 存储配置
-max_value_size = 65536   # 64KB
+max_value_size = 65536 # 64KB
 facts_history = 50
 labels_history = 50
 
