--- a/crates/oasis-core/Cargo.toml
+++ b/crates/oasis-core/Cargo.toml
@@ -32,9 +32,11 @@ sha2 = "0.10"
 rand = "0.8"
 dashmap = "5.5"
 once_cell = "1.19"
+moka = { version = "0.12", features = ["sync"] }
 json-patch = "1"
 tokio-stream = { version = "0.1", features = ["sync"] }
 tokio-util = "0.7"
+url = "2.5"
 
 [build-dependencies]
 tonic-build = { version = "0.11", features = ["prost"] }
