--- a/crates/oasis-server/Cargo.toml
+++ b/crates/oasis-server/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 oasis-core = { path = "../oasis-core" }
+figment = { version = "0.10", features = ["toml", "env"] }
 
 # 从 workspace 继承的依赖
 tokio = { workspace = true }
@@ -16,7 +17,6 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-figment = { workspace = true }
 async-nats = { workspace = true }
 tonic = { workspace = true, features = ["tls"] }
 clap = { workspace = true }
@@ -26,7 +26,6 @@ toml = { workspace = true }
 
 # 本地依赖
 uuid = { version = "1.15", features = ["v4"] }
-time = { version = "0.3", features = ["macros"] }
 governor = "0.6"
 cel = "0.11"
 sha2 = "0.10"
