--- a/crates/oasis-cli/Cargo.toml
+++ b/crates/oasis-cli/Cargo.toml
@@ -1,31 +1,26 @@
 [package]
 name = "oasis-cli"
 version = "0.1.0"
-edition = "2024"
-
-[[bin]]
-name = "oasis-cli"
-path = "src/main.rs"
+edition = "2021"
 
 [dependencies]
-oasis-core = { path = "../oasis-core" }
-
-# 从 workspace 继承的依赖
-tokio = { workspace = true }
 anyhow = { workspace = true }
+clap = { workspace = true, features = ["derive", "env"] }
 tonic = { workspace = true }
-clap = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-serde = { workspace = true }
+oasis-core = { path = "../oasis-core" }
+serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-async-nats = { workspace = true }
-figment = { workspace = true }
-async-trait = { workspace = true }
-futures-util = { workspace = true }
 serde_yaml = { workspace = true }
-toml = { workspace = true }
-
-# 本地依赖
 indicatif = "0.17"
-rustls-pemfile = "1"
+which = "6.0"
+toml = { workspace = true }
+tokio = { workspace = true, features = [
+  "macros",
+  "rt-multi-thread",
+  "fs",
+  "process",
+] }
+console = "0.15"
+comfy-table = "7.1"
+rcgen = "0.12"
+chrono = "0.4"
