--- a/crates/oasis-agent/Cargo.toml
+++ b/crates/oasis-agent/Cargo.toml
@@ -33,7 +33,6 @@ time = { version = "0.3", features = ["macros"] }
 hostname = "0.3"
 backoff = { version = "0.4", features = ["tokio"] }
 sha2 = "0.10"
-rmp-serde = "1.1"
 sysinfo = "0.30"
 if-addrs = "0.10"
 nix = { version = "0.29", features = [
@@ -53,6 +52,7 @@ url = "2.4"
 json-patch = "1.0"
 pnet_datalink = "0.34"
 futures = "0.3"
+prost = { workspace = true }
 
 [dev-dependencies]
 tempfile = "3.0"
