--- a/crates/oasis-core/Cargo.toml
+++ b/crates/oasis-core/Cargo.toml
@@ -16,6 +16,7 @@ tonic = { workspace = true }
 async-trait = { workspace = true }
 figment = { workspace = true }
 futures-util = { workspace = true }
+futures = "0.3"
 prost = { workspace = true }
 # 配置解析所需
 toml = "0.8"
