--- a/crates/oasis-agent/Cargo.toml
+++ b/crates/oasis-agent/Cargo.toml
@@ -52,6 +52,7 @@ url = "2.4"
 json-patch = "1.0"
 pnet_datalink = "0.34"
 futures = "0.3"
+tokio-util = "0.7"
 prost = { workspace = true }
 
 [dev-dependencies]
