--- a/crates/oasis-server/Cargo.toml
+++ b/crates/oasis-server/Cargo.toml
@@ -28,7 +28,6 @@ toml = { workspace = true }
 # 本地依赖
 uuid = { version = "1.15", features = ["v4"] }
 governor = "0.6"
-cel = "0.11"
 sha2 = "0.10"
 tokio-stream = "0.1"
 dashmap = "5.5"
@@ -37,6 +36,13 @@ anyhow = { workspace = true }
 futures = "0.3"
 tokio-util = "0.7"
 base64 = "0.21"
+
+# 选择器重构依赖
+roaring = "0.10"
+arc-swap = "1.6"
+pest = "2.7"
+pest_derive = "2.7"
+moka = "0.12"
 
 # TLS 相关依赖
 tonic-health = "0.11"
