--- a/crates/oasis-agent/Cargo.toml
+++ b/crates/oasis-agent/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = { workspace = true }
 figment = { workspace = true }
 async-nats = { workspace = true }
 async-trait = { workspace = true }
+sysinfo = { workspace = true }
 
 # 本地依赖
 uuid = { version = "1.15", features = ["v4"] }
@@ -33,7 +34,6 @@ time = { version = "0.3", features = ["macros"] }
 hostname = "0.3"
 backoff = { version = "0.4", features = ["tokio"] }
 sha2 = "0.10"
-sysinfo = "0.30"
 if-addrs = "0.10"
 once_cell = "1"
 lazy_static = "1.4"
