--- a/crates/oasis-cli/Cargo.toml
+++ b/crates/oasis-cli/Cargo.toml
@@ -14,6 +14,8 @@ tonic = { workspace = true }
 oasis-core = { path = "../oasis-core" }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+sysinfo = { workspace = true }
+humantime = "2.1"
 which = "6.0"
 toml = { workspace = true }
 tokio = { workspace = true, features = [
