--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ clap = { version = "4.5", features = ["derive", "env"] }
 async-trait = "0.1"
 figment = { version = "0.10", features = ["toml", "env"] }
 futures-util = "0.3"
+futures = "0.3"
 
 # 配置管理相关 - 多个组件使用
 serde_yaml = "0.9"
@@ -39,3 +40,17 @@ prost = "0.12"
 # 并发数据结构
 dashmap = "5.5"
 sysinfo = "0.30"
+
+chrono = { version = "0.4", features = ["serde", "clock"] }
+time = { version = "0.3", features = ["macros"] }
+uuid = { version = "1.15", features = ["v4"] }
+governor = "0.6"
+sha2 = "0.10"
+tokio-stream = "0.1"
+tokio-util = "0.7"
+url = "2.5"
+regex = "1.10"
+base64 = "0.21"
+once_cell = "1.19"
+lazy_static = "1.5.0"
+backoff = { version = "0.4", features = ["tokio"] }
