--- a/crates/oasis-agent/Cargo.toml
+++ b/crates/oasis-agent/Cargo.toml
@@ -27,24 +27,22 @@ figment = { workspace = true }
 async-nats = { workspace = true }
 async-trait = { workspace = true }
 sysinfo = { workspace = true }
-
-# 本地依赖
-uuid = { version = "1.15", features = ["v4"] }
-time = { version = "0.3", features = ["macros"] }
-hostname = "0.3"
-backoff = { version = "0.4", features = ["tokio"] }
-sha2 = "0.10"
-if-addrs = "0.10"
-once_cell = "1"
-lazy_static = "1.4"
-regex = "1"
-getrandom = "0.2"
-libc = "0.2"
-chrono = { version = "0.4", features = ["serde"] }
-base64 = "0.21"
-url = "2.4"
-futures = "0.3"
-tokio-util = "0.7"
+uuid = { workspace = true }
+time = { workspace = true }
+backoff = { workspace = true }
+sha2 = { workspace = true }
+once_cell = { workspace = true }
+lazy_static = { workspace = true }
+regex = { workspace = true }
+chrono = { workspace = true }
+base64 = { workspace = true }
+url = { workspace = true }
+futures = { workspace = true }
+tokio-util = { workspace = true }
 prost = { workspace = true }
 dashmap = { workspace = true }
 
+hostname = "0.3"
+if-addrs = "0.10"
+getrandom = "0.2"
+libc = "0.2"
