--- a/crates/oasis-cli/Cargo.toml
+++ b/crates/oasis-cli/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { workspace = true, features = [
   "process",
   "io-std",
 ] }
+regex = { workspace = true }
 
 humantime = "2.1"
 which = "6.0"
