--- a/crates/oasis-cli/Cargo.toml
+++ b/crates/oasis-cli/Cargo.toml
@@ -19,7 +19,6 @@ serde_json = { workspace = true }
 rcgen = { workspace = true }
 chrono = { workspace = true }
 time = { workspace = true }
-futures = { workspace = true }
 toml = { workspace = true }
 tokio = { workspace = true, features = [
   "macros",
@@ -37,3 +36,4 @@ console = "0.15"
 comfy-table = "7.1"
 
 bytesize = "1.3"
+indicatif = "0.17"
