--- a/crates/oasis-core/Cargo.toml
+++ b/crates/oasis-core/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
+base64 = { workspace = true }
 async-nats = { workspace = true }
 tonic = { workspace = true }
 async-trait = { workspace = true }
@@ -41,3 +42,34 @@ signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
 
 [build-dependencies]
 tonic-build = { version = "0.11", features = ["prost"] }
+
+[dev-dependencies]
+criterion = "0.5"
+roaring = "0.10"
+pest = "2.7"
+pest_derive = "2.7"
+serde_json = "1.0"
+
+[[bench]]
+name = "proto"
+harness = false
+
+[[bench]]
+name = "selector"
+harness = false
+
+[[bench]]
+name = "fanout"
+harness = false
+
+[[bench]]
+name = "nats_io"
+harness = false
+
+[[bench]]
+name = "e2e_latency"
+harness = false
+
+[[bench]]
+name = "throughput"
+harness = false
