--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,19 @@ members = [
 ]
 resolver = "2"
 
+[workspace.lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+unwrap_used = "warn"
+expect_used = "warn"
+clone_on_ref_ptr = "warn"
+missing_const_for_fn = "warn"
+
+[workspace.lints.rust]
+unsafe_code = "warn"
+
 [workspace.dependencies]
-# 核心依赖
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
@@ -19,38 +29,34 @@ tracing-subscriber = { version = "0.3", features = [
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-async-nats = "0.42"
-tonic = { version = "0.11", features = ["tls"] }
+async-nats = "0.45"
+tonic = { version = "0.14", features = ["tls-ring"] }
+tonic-prost = "0.14"
 clap = { version = "4.5", features = ["derive", "env"] }
 async-trait = "0.1"
 figment = { version = "0.10", features = ["toml", "env"] }
 futures-util = "0.3"
 futures = "0.3"
 
-# 配置管理相关 - 多个组件使用
 serde_yaml = "0.9"
-toml = "0.8"
+toml = "0.9"
 
-# 证书生成相关
-rcgen = "0.12"
-x509-parser = "0.15"
+rcgen = "0.14"
+x509-parser = "0.18"
 
-prost = "0.12"
+prost = "0.14"
 
-# 并发数据结构
-dashmap = "5.5"
-sysinfo = "0.30"
+dashmap = "6.1"
+sysinfo = "0.36"
 
 chrono = { version = "0.4", features = ["serde", "clock"] }
 time = { version = "0.3", features = ["macros"] }
-uuid = { version = "1.15", features = ["v4"] }
-governor = "0.6"
+uuid = { version = "1.19", features = ["v7"] }
+governor = "0.10"
 sha2 = "0.10"
 tokio-stream = "0.1"
 tokio-util = "0.7"
 url = "2.5"
 regex = { version = "1", default-features = false, features = ["std"] }
-base64 = "0.21"
-once_cell = "1.19"
-lazy_static = "1.5.0"
+base64 = "0.22"
 backoff = { version = "0.4", features = ["tokio"] }
