--- a/crates/oasis-agent/Cargo.toml
+++ b/crates/oasis-agent/Cargo.toml
@@ -2,6 +2,10 @@
 name = "oasis-agent"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.85"
+
+[lints]
+workspace = true
 
 [features]
 default = ["std-backend"]
@@ -16,7 +20,6 @@ path = "src/main.rs"
 [dependencies]
 oasis-core = { path = "../oasis-core" }
 
-# 从 workspace 继承的依赖
 tokio = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
@@ -31,8 +34,6 @@ uuid = { workspace = true }
 time = { workspace = true }
 backoff = { workspace = true }
 sha2 = { workspace = true }
-once_cell = { workspace = true }
-lazy_static = { workspace = true }
 regex = { workspace = true }
 chrono = { workspace = true }
 base64 = { workspace = true }
@@ -42,7 +43,7 @@ tokio-util = { workspace = true }
 prost = { workspace = true }
 dashmap = { workspace = true }
 
-hostname = "0.3"
-if-addrs = "0.10"
-getrandom = "0.2"
+hostname = "0.4"
+if-addrs = "0.14"
+getrandom = "0.3"
 libc = "0.2"
