--- a/crates/oasis-core/Cargo.toml
+++ b/crates/oasis-core/Cargo.toml
@@ -2,9 +2,12 @@
 name = "oasis-core"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.85"
+
+[lints]
+workspace = true
 
 [dependencies]
-# 从 workspace 继承的依赖
 tokio = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
@@ -13,6 +16,7 @@ serde = { workspace = true }
 base64 = { workspace = true }
 async-nats = { workspace = true }
 tonic = { workspace = true }
+tonic-prost = { workspace = true }
 async-trait = { workspace = true }
 figment = { workspace = true }
 futures-util = { workspace = true }
@@ -25,7 +29,6 @@ governor = { workspace = true }
 backoff = { workspace = true }
 sha2 = { workspace = true }
 dashmap = { workspace = true }
-once_cell = { workspace = true }
 tokio-stream = { workspace = true, features = ["sync"] }
 tokio-util = { workspace = true }
 url = { workspace = true }
@@ -33,21 +36,27 @@ chrono = { workspace = true }
 regex = { workspace = true }
 
 libc = "0.2"
-thiserror = "1.0"
-derive_more = "0.99"
-bytes = "1.6"
-rand = "0.8"
-signal-hook = "0.3"
-signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
+thiserror = "2.0"
+derive_more = { version = "2.1", features = [
+    "display",
+    "from",
+    "as_ref",
+    "into",
+] }
+bytes = "1.11"
+rand = "0.9"
+signal-hook = "0.4"
+signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
 
 [build-dependencies]
-tonic-build = { version = "0.11", features = ["prost"] }
+tonic-build = { version = "0.14" }
+tonic-prost-build = { version = "0.14" }
 
 [dev-dependencies]
-criterion = "0.5"
-roaring = "0.10"
-pest = "2.7"
-pest_derive = "2.7"
+criterion = "0.7"
+roaring = "0.11"
+pest = "2.8"
+pest_derive = "2.8"
 serde_json = "1.0"
 
 [[bench]]
