--- a/crates/oasis-server/Cargo.toml
+++ b/crates/oasis-server/Cargo.toml
@@ -2,6 +2,10 @@
 name = "oasis-server"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.85"
+
+[lints]
+workspace = true
 
 [[bin]]
 name = "oasis-server"
@@ -10,13 +14,12 @@ path = "src/main.rs"
 [dependencies]
 oasis-core = { path = "../oasis-core" }
 
-# 从 workspace 继承的依赖
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 async-nats = { workspace = true }
-tonic = { workspace = true, features = ["tls"] }
+tonic = { workspace = true }
 prost = { workspace = true }
 clap = { workspace = true }
 async-trait = { workspace = true }
@@ -32,15 +35,11 @@ anyhow = { workspace = true }
 futures = { workspace = true }
 tokio-util = { workspace = true }
 base64 = { workspace = true }
-once_cell = { workspace = true }
-lazy_static = { workspace = true }
 figment = { workspace = true, features = ["toml", "env"] }
 
-roaring = "0.10"
-pest = "2.7"
-pest_derive = "2.7"
+roaring = "0.11"
+pest = "2.8"
+pest_derive = "2.8"
 
-# TLS 相关依赖
-rustls = "0.22"
-rustls-pemfile = "2.1"
+rustls-pemfile = "2.2"
 fs2 = "0.4"
