--- a/crates/oasis-cli/Cargo.toml
+++ b/crates/oasis-cli/Cargo.toml
@@ -37,7 +37,7 @@ humantime = "2.3"
 which = "8.0"
 
 console = "0.16"
-comfy-table = "7.1"
+comfy-table = "=7.1.0"
 
 bytesize = "2.3"
 indicatif = "0.18"
