--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,10 +44,9 @@ figment = { version = "0.10", features = ["toml", "env"] }
 futures-util = "0.3"
 futures = "0.3"
 
-serde_yml = "0.0.12"
 toml = "0.9"
 
-rcgen = "0.14"
+rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
 x509-parser = "0.18"
 
 prost = "0.14"
@@ -60,9 +59,11 @@ time = { version = "0.3", features = ["macros"] }
 uuid = { version = "1.19", features = ["v7"] }
 governor = "0.10"
 sha2 = "0.10"
+rand = "0.9"
+hex = "0.4"
 tokio-stream = "0.1"
 tokio-util = "0.7"
 url = "2.5"
 regex = { version = "1", default-features = false, features = ["std"] }
 base64 = "0.22"
-backoff = { version = "0.4", features = ["tokio"] }
+backon = "0.4"
