--- a/crates/oasis-agent/Cargo.toml
+++ b/crates/oasis-agent/Cargo.toml
@@ -32,7 +32,7 @@ async-trait = { workspace = true }
 sysinfo = { workspace = true }
 uuid = { workspace = true }
 time = { workspace = true }
-backoff = { workspace = true }
+backon = { workspace = true }
 sha2 = { workspace = true }
 regex = { workspace = true }
 chrono = { workspace = true }
@@ -47,3 +47,6 @@ hostname = "0.4"
 if-addrs = "0.14"
 getrandom = "0.3"
 libc = "0.2"
+
+[dev-dependencies]
+tempfile = "3.0"
