--- a/crates/oasis-cli/Cargo.toml
+++ b/crates/oasis-cli/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [dependencies]
 base64 = { workspace = true }
 anyhow = { workspace = true }
+backon = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
 tonic = { workspace = true }
 oasis-core = { path = "../oasis-core" }
@@ -32,6 +33,9 @@ tokio = { workspace = true, features = [
   "io-std",
 ] }
 regex = { workspace = true }
+sha2 = { workspace = true }
+rand = "0.9"
+hex = "0.4"
 
 humantime = "2.3"
 which = "8.0"
@@ -42,3 +46,7 @@ comfy-table = "=7.1.0"
 bytesize = "2.3"
 indicatif = "0.18"
 clap_complete = "4.5.65"
+
+[dev-dependencies]
+tempfile = "3.14"
+x509-parser = { workspace = true }
