--- a/crates/oasis-agent/Cargo.toml
+++ b/crates/oasis-agent/Cargo.toml
@@ -48,5 +48,9 @@ if-addrs = "0.14"
 getrandom = "0.3"
 libc = "0.2"
 
+# 原子性文件操作
+tempfile = "3.24"
+atomicwrites = "0.4"
+
 [dev-dependencies]
 tempfile = "3.0"
